Pagination in progress to be added

--- a/CarMarketplace.Web/Views/Sale/Home.cshtml
+++ b/CarMarketplace.Web/Views/Sale/Home.cshtml
@@ -22,7 +22,7 @@
         </div>
         <div class="col-md-6 my-4 align-items-middle">
             <div class="d-grid col-3 mx-auto float-end mt-2">
-                <a asp-controller="Catalog" asp-action="Search" class="btn btn-primary btn-lg">Search</a>
+                <a asp-controller="Sale" asp-action="Search" class="btn btn-primary btn-lg">Search</a>
             </div>
         </div>
     </div>
