--- a/CarMarketplace.Web/Views/Sale/Result.cshtml
+++ b/CarMarketplace.Web/Views/Sale/Result.cshtml
@@ -78,6 +78,7 @@
         </div>
     }
 </div>
+@*<partial name="_PagingPartial" model="@Model" />*@
 
 <script>
     function toggleHeart(button, postId) {
