--- a/CarMarketplace.Web/Views/_ViewImports.cshtml
+++ b/CarMarketplace.Web/Views/_ViewImports.cshtml
@@ -5,10 +5,12 @@
 @using Microsoft.AspNetCore.Identity;
 @using CarMarketplace.Web.ViewModels;
 @using CarMarketplace.Services.Contracts;
+@using CarMarketplace.Web.ViewModels.Page;
 @using CarMarketplace.Web.ViewModels.User;
 @using CarMarketplace.Web.ViewModels.Lender;
 @using CarMarketplace.Web.ViewModels.Common;
 @using CarMarketplace.Web.ViewModels.Seller;
 @using CarMarketplace.Web.ViewModels.Catalog;
 @using CarMarketplace.Web.ViewModels.SalePost;
+@using CarMarketplace.Web.ViewModels.RentPosts;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
