Seller area added Renting view done

--- a/CarMarketplace.Web/Areas/Seller/Views/Seller/Add.cshtml
+++ b/CarMarketplace.Web/Areas/Seller/Views/Seller/Add.cshtml
@@ -6,7 +6,7 @@
     <h1>@ViewData["Title"]</h1>
 </div>
 <div class="container mt-5">
-    <form enctype="multipart/form-data" asp-controller="SalePost" asp-action="Post" method="post">
+    <form enctype="multipart/form-data" asp-area="Seller" asp-action="Post" method="post">
         <div class="row text-center mt-3">
             <span class="fs-3">Choose up to 10 photos</span>
             <div class="form-group col-5 mb-3 text-center">
