--- a/CarMarketplace.Web/Areas/Seller/Views/Seller/Archive.cshtml
+++ b/CarMarketplace.Web/Areas/Seller/Views/Seller/Archive.cshtml
@@ -38,7 +38,7 @@
                                     <a class="btn btn-primary btn-warning col-lg-12" onclick="ActivatePost('@post.Id')">Activate</a>
                                 </div>
                                 <div class="col-4">
-                                    <a class="btn btn-primary col-lg-12" asp-controller="SalePost" asp-action="Details" asp-route-id="@post.Id">View</a>
+                                    <a class="btn btn-primary col-lg-12" asp-area="" asp-controller="SalePost" asp-action="Details" asp-route-id="@post.Id">View</a>
                                 </div>
                                 <div class="col-4">
                                     <a class="btn btn-primary btn-danger col-lg-12" onclick="showConfirmDelete('@post.Id', '@post.Car.Id')">Delete</a>
@@ -69,7 +69,7 @@
 
 <script>
     function showConfirmDelete(id, carId) {
-        var url = '@Url.Action("Delete", "SalePost")' + '?postId=' + id + '?carId=' + carId;
+        var url = '@Url.Action("Delete")' + '?postId=' + id + '?carId=' + carId;
         $('#confirmButtonDelete').get(0).addEventListener('click', () => { confirmActionDelete(url); });
         $('#confirmModalDelete').modal('show');
     }
@@ -85,11 +85,17 @@
 
     function ActivatePost(postId){
 
+        var url = '@Url.Action("UserPosts")'
+
         $.ajax({
             contentType: "application/json",
             type: 'POST',
-            url: '/Seller/ActivatePost',
-            data:JSON.stringify(postId)
+            url: 'ActivatePost',
+            data: JSON.stringify(postId),
+            success: function(){
+
+                window.location.href = url;
+            }
         });
     }
 </script>
