--- a/CarMarketplace.Web/Areas/Seller/Views/Seller/Edit.cshtml
+++ b/CarMarketplace.Web/Areas/Seller/Views/Seller/Edit.cshtml
@@ -20,7 +20,7 @@
     </div>
 </div>
 <div class="container mt-1 row-">
-    <form enctype="multipart/form-data" asp-action="Edit" method="post">
+    <form enctype="multipart/form-data" asp-area="Seller" asp-action="Edit" method="post">
         <div class="row mt-3 text-center">
             <span class="fs-3">Choose up to 10 photos</span>
             <div class="form-group col-5 mb-3 text-center">
