--- a/CarMarketplace.Web/Views/Shared/_Layout.cshtml
+++ b/CarMarketplace.Web/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                         @if (isSeller)
                         {
                             <li class="nav-item ms-1 me-1">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Seller" asp-action="UserPosts">My Posts</a>
+                                <a class="nav-link text-dark" asp-area="Seller" asp-controller="Seller" asp-action="UserPosts">My Posts</a>
                             </li>
                         }
                         <li class="nav-item">
