--- a/CarMarketplace.Web/Views/SalePost/Details.cshtml
+++ b/CarMarketplace.Web/Views/SalePost/Details.cshtml
@@ -24,7 +24,6 @@
                         var publicId = Model.ThumbnailImage;
                         image = ViewData["CloudDomain"] + publicId;
                     }
-
                     <img src="@image" class="img-fluid rounded float-end" alt="@Model.Car.Make.Name @Model.Car.Model.ModelName">
                 </div>
                 @foreach (var imageId in Model.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries))
@@ -34,6 +33,13 @@
                 }
             </div>
             <div class="row justify-items-between ms-4 gap-3">
+                @{
+                    publicId = Model.ThumbnailImage;
+                    image = ViewData["CloudDomain"] + publicId;
+                }
+                <div class="col-2">
+                    <img src="@image" class="rounded img-nav" onclick="loadCarouselItem(0)" alt="@Model.Car.Make.Name @Model.Car.Model.ModelName">
+                </div>
                 @for (int i = 0; i < Model.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries).Length; i++)
                 {
                     imagePublicId = Model.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries)[i];
