--- a/CarMarketplace.Web/Views/Shared/_Layout.cshtml
+++ b/CarMarketplace.Web/Views/Shared/_Layout.cshtml
@@ -1,8 +1,10 @@
 ﻿@inject ISellerService SellerService
 @inject SignInManager<ApplicationUser> SignInManager
+@inject ILenderService LenderService
 @{
     bool isSeller = await SellerService.SellerExistbyUserIdAsync(User.FindFirstValue(ClaimTypes.NameIdentifier)).ConfigureAwait(false);
     bool isLogged = SignInManager.IsSignedIn(User);
+    bool isLender = await LenderService.LenderExistbyUserIdAsync(User.FindFirstValue(ClaimTypes.NameIdentifier)).ConfigureAwait(false);
 }
 
 <!DOCTYPE html>
@@ -53,6 +55,12 @@
                         {
                             <li class="nav-item ms-1 me-1">
                                 <a class="nav-link text-dark" asp-area="Seller" asp-controller="Seller" asp-action="UserPosts">My Posts</a>
+                            </li>
+                        }
+                        @if (isLender)
+                        {
+                            <li class="nav-item ms-1 me-1">
+                                <a class="nav-link text-dark" asp-area="Lender" asp-controller="Lender" asp-action="LenderPosts">My Posts</a>
                             </li>
                         }
                         <li class="nav-item">
