--- a/CarMarketplace.Web/Areas/Lender/Views/Lender/LenderPosts.cshtml
+++ b/CarMarketplace.Web/Areas/Lender/Views/Lender/LenderPosts.cshtml
@@ -1,1 +1,113 @@
-﻿
+﻿@model ICollection<RentPostViewModel>
+
+@{
+    ViewData["CloudDomain"] = "https://res.cloudinary.com/carmarketplace/image/upload/";
+    var imageSrc = "";
+    ViewData["Title"] = "My Collection";
+}
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h1 class="my-4">@ViewData["Title"]</h1>
+        </div>
+        <div class="col-md-6 my-4 align-items-middle">
+            <div class="d-grid col-3 mx-auto float-end mt-2">
+                <a asp-area="Lender" asp-action="Add" class="btn btn-primary btn-lg">Add a post</a>
+            </div>
+        </div>
+    </div>
+
+    @for (int i = 0; i < Model.Count; i += 3)
+    {
+        <div class="row">
+            @foreach (var post in Model.Skip(i).Take(3))
+            {
+                imageSrc = ViewData["CloudDomain"] + post.ImagePublicId;
+
+                <div class="col-md-4">
+                    <div class="card mb-4 p-3 rounded-3 bg-primary text-white">
+                        <img src="@imageSrc" class="card-img-catalog" alt="@post.Car.Make.Name @post.Car.Model.ModelName">
+                        <div class="card-body">
+                            <h3 class="card-title"><strong>@post.Car.Make.Name @post.Car.Model.ModelName</strong></h3>
+                            <hr>
+                            <span class="card-text fs-3">Rented: <span class="card-text fs-3 fst-italic">@(post.IsRented ? "Yes" : "No")</span></span>
+                            <br>
+                            <span class="card-text fs-3">Year: <span class="fst-italic">@post.Car.Year</span></span>
+                            <br>
+                            @{
+                                var displacement = "";
+                                if (post.Car.Engine.Displacement != null)
+                                {
+                                    displacement = (post.Car.Engine.Displacement / 100).ToString().Insert(1, ".") + "l";                                  
+                                }
+                                else
+                                {
+                                    displacement = "";
+                                }
+                            }
+                            <span class="card-text fs-3">Engine: <span class="fst-italic">@displacement @post.Car.Engine.FuelType</span></span>
+                            <p class="card-text fs-3 fst-italic">@post.Lender.City.Province.ProvinceName, @post.Lender.City.CityName</p>
+                            <span class="card-text fs-4 fst-italic">@post.CreatedOn.ToString("HH:mm:ss dd/MM/yyyy")</span>
+                            <br>
+                            <div class="row justify-content-center mt-2">
+                                <div class="col-6">
+                                    <a class="btn btn-primary btn-danger col-lg-12" onclick="showConfirmDelete('@post.Id', '@post.Car.Id')">Delete</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    }
+</div>
+<div class="modal fade" id="confirmModalDelete" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content custom-dialog-box">
+            <div class="modal-body fs-3">
+                <p>Are you sure you want to <strong>delete</strong> your post?</p>
+            </div>
+            <div class="modal-footer justify-content-center">
+                <button type="button" class="btn btn-lg btn-primary" data-dismiss="modal" onclick="cancelDelete()">Cancel</button>
+                <button type="button" id="confirmButtonDelete" class="btn btn-lg btn-danger">Confirm</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script>
+    function showConfirmDelete(postId, carId) {
+        $('#confirmButtonDelete').get(0).addEventListener('click', () => { confirmActionDelete(postId, carId); });
+        $('#confirmModalDelete').modal('show');
+    }
+
+    function confirmActionDelete(postId, carId) {
+        $('#confirmModalDelete').modal('hide');
+
+        var url = '@Url.Action("UserPosts")';
+
+        const data = {
+            postId: postId,
+            carId: carId
+        }
+
+        $.ajax({
+            contentType: "application/json",
+            type: 'POST',
+            url: 'Delete',
+            data: JSON.stringify(data),
+            success: function () {
+
+                window.location.href = url;
+            }
+        });
+    }
+
+    function cancelDelete() {
+        $('#confirmModalDelete').modal('hide');
+    }
+</script>
+
+
