--- a/CarMarketplace.Web/Views/Shared/_Layout.cshtml
+++ b/CarMarketplace.Web/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                         @if (isLender)
                         {
                             <li class="nav-item ms-1 me-1">
-                                <a class="nav-link text-dark" asp-area="Lender" asp-controller="Lender" asp-action="LenderPosts">My Posts</a>
+                                <a class="nav-link text-dark" asp-area="Lender" asp-controller="Lender" asp-action="UserPosts">My Posts</a>
                             </li>
                         }
                         <li class="nav-item">
